--- a/contacto.html
+++ b/contacto.html
@@ -25,7 +25,7 @@
     </nav>
     <section id="contacto">
         <h2>Contacto</h2>
-        <p>Esta es mi primera página web creada para la Unidad Educativa Macandamine. si Alexander Dice que el la creo es mentira, por cierto le huelen las patas.</p>
+        <p>Esta es mi primera página web creada para la Unidad Educativa Macandamine.</p>
     </section>
     <footer>&copy; 2024 Unidad Educativa Macandamine</footer>
 </body>
